--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "file-loader": "^0.9.0",
     "fullpage": "^1.4.2",
     "jquery": "^3.1.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
     "path": "^0.12.7",
     "source-map": "^0.5.6",
     "style-loader": "^0.13.1",
