--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "eslint-loader": "^1.5.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.9.0",
-    "fullpage": "^1.4.2",
+    "fullpage.js": "^2.8.4",
     "jquery": "^3.1.0",
     "jquery-ui": "^1.12.0",
     "less": "^2.7.1",
